<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>biz.leibfried</groupId>
  <artifactId>corbaBeans</artifactId>
  <version>1.3.0</version>
  
  <name>CORBA Beans</name>
  <description>First Attempt at wrapping CORBA infrastructure with Spring beans</description>
  
  <properties>
    <jacorb.home.path>D:\Development\JacORB</jacorb.home.path>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <org.springframework.version>4.3.19.RELEASE</org.springframework.version>
    <org.jacorb.version>3.9</org.jacorb.version>
  </properties>
  
  
  <dependencies>
  
    <!-- Spring Framework -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${org.springframework.version}</version>
      <exclusions>
        <exclusion>
          <!-- 'replaced' by org.slf4j:jcl-over-slf4j -->
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
        
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    
    <!-- JacORB -->
    <dependency>
      <groupId>org.jacorb</groupId>
      <artifactId>jacorb</artifactId>
      <version>${org.jacorb.version}</version>
      <exclusions>
        <exclusion>
          <!-- 'replaced' by org.slf4j:slf4j-api below -->
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
    	<groupId>org.jacorb</groupId>
    	<artifactId>jacorb-idl-compiler</artifactId>
    	<version>${org.jacorb.version}</version>
    </dependency>
    
    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>1.7.22</version>
    </dependency>
    
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.1.9</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${org.springframework.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.19.0</version>
    </dependency>
    
  </dependencies>
    
  
  <build>
    <plugins>
      
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.10</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <!-- source>src/main/generated</source -->
                <source>target/generated-sources/idl</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add-integrationtest-sources</id>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/int-test/java</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add-integrationtest-resources</id>
            <goals>
              <goal>add-test-resource</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>src/int-test/resources</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>idlj-maven-plugin</artifactId>
        <version>1.2.2</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <compiler>jacorb</compiler>
          <includeDirs>
            <includeDir>${basedir}/src/main/idl</includeDir>
          </includeDirs>
          <sources>
            <source>
              <additionalArguments>
                <additionalArgument>-d</additionalArgument>
                <!--additionalArgument>${basedir}\src\main\generated</additionalArgument -->
                <additionalArgument>${basedir}\target\generated-sources\idl</additionalArgument>
              </additionalArguments>
              <includes>
                <include>*.idl</include>                
              </includes>
            </source>
          </sources>
          <emitStubs>true</emitStubs>
          <emitSkeletons>true</emitSkeletons>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <show>public</show>
          <nohelp>true</nohelp>
          <excludePackageNames>biz.ple_idl</excludePackageNames>
          <additionalJOption>-Xdoclint:none</additionalJOption>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.1</version>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
            </goals>
          </execution>
          <execution>
            <id>verify</id>
            <goals>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>      
      </plugin>
      
      <plugin>
        <groupId>com.bazaarvoice.maven.plugins</groupId>
        <artifactId>process-exec-maven-plugin</artifactId>
        <version>0.8</version>
        <executions>
          <execution>
            <id>NameService</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>start</goal>
            </goals>
            <configuration>
              <name>JacORBNameService</name>
              <waitAfterLaunch>5</waitAfterLaunch>              
              <arguments>
                <argument>java</argument>
                <argument>-Djava.endorsed.dirs="${jacorb.home.path}\lib"</argument>
                <argument>-Djacorb.home="${jacorb.home.path}"</argument>
                <argument>-Dorg.omg.CORBA.ORBClass=org.jacorb.orb.ORB</argument>
                <argument>-Dorg.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton</argument>
                <argument>-Djacorb.log.default.verbosity=0</argument>  
                <argument>-Djacorb.naming.ior_filename=C:\\JacORB_NSRef.ior</argument>
                <argument>org.jacorb.naming.NameServer</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>stop-all</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>stop-all</goal>
            </goals>
          </execution>        
        </executions>
      </plugin>

    </plugins>
    
    <pluginManagement>
    	<plugins>
    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
    		<plugin>
    			<groupId>org.eclipse.m2e</groupId>
    			<artifactId>lifecycle-mapping</artifactId>
    			<version>1.0.0</version>
    			<configuration>
    				<lifecycleMappingMetadata>
    					<pluginExecutions>
    						<pluginExecution>
    							<pluginExecutionFilter>
    								<groupId>org.codehaus.mojo</groupId>
    								<artifactId>
    									idlj-maven-plugin
    								</artifactId>
    								<versionRange>
    									[1.2.1,)
    								</versionRange>
    								<goals>
    									<goal>generate</goal>
    								</goals>
    							</pluginExecutionFilter>
    							<action>
    								<ignore />
    							</action>
    						</pluginExecution>
    					</pluginExecutions>
    				</lifecycleMappingMetadata>
    			</configuration>
    		</plugin>
    	</plugins>
    </pluginManagement>
  </build>
  
</project>